<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="REGISTER"
            android:layout_marginTop="0dp"
            android:textColor="#ffffff"
            android:textSize="35dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="Welcome!"
            android:layout_marginTop="15dp"
            android:textColor="#ffffff"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text|textPersonName"
            android:singleLine="true"
            android:typeface="normal"
            android:gravity="center"
            android:textColorHint="#fff"
            android:textColor="#ffffff"
            app:backgroundTint="#fff"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text|textPersonName"
            android:singleLine="true"
            android:typeface="normal"
            android:gravity="center"
            android:textColorHint="#fff"
            android:textColor="#ffffff"
            app:backgroundTint="#fff"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:singleLine="true"
            android:typeface="normal"
            android:gravity="center"
            android:textColorHint="#fff"
            android:textColor="#ffffff"
            app:backgroundTint="#fff"
            android:layout_marginTop="20dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_activityregister_registerbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="7dp"
            app:cardBackgroundColor="#ffffff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#0B98D5"
                android:text="@string/register"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>